<resources>
    <string name="app_name">StoryApp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="not_registered">Dont have an account?</string>
    <string name="register_here"><u>Register here</u></string>
    <string name="title_login_page">Login to your Account</string>
    <string name="title_register_page">Create your Account</string>
    <string name="error_email">Input your email correctly</string>
    <string name="error_username">Input your name correctly</string>
    <string name="password_dont_match_alert">Password dont match</string>
    <string name="error_password_length">Password length must be more than 6 characters</string>
    <string name="name_alert">Name min 2 character</string>
    <string name="email_invalid">Email invalid</string>
    <string name="check_input">Check Your Input</string>
    <string name="preview">Preview</string>
    <string name="description">Description</string>
    <string name="add_story">Add Story</string>
    <string name="add_description">Add Description</string>
    <string name="input_image_first">Input Your Image First!</string>
    <string name="failed_instance">Failed Instance</string>
    <string name="viewing_image">Viewing Image</string>
    <string name="switching_camera">Switch Camera</string>
    <string name="failed_take_a_photo">Failed take a photo</string>
    <string name="failed_to_open_camera">Failed to open camera</string>
    <string name="choose_a_image">Choose a image</string>
    <string name="img_story">Image Story</string>
    <string name="created_add">Created at %1$s,</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="not_found">Sorry not found</string>
    <string name="click_to_add_story">Click to add story</string>
    <string name="confirmation">Confirmation</string>
    <string name="you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="must_be_filled">Must be Filled</string>
    <string name="login_image">Login Image</string>
</resources>